<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:layout_gravity="center"
        android:fontFamily="sans-serif"
        android:lineSpacingExtra="12sp"
        android:text="@string/TipCalculator"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:text="@string/TipAmount"
        android:layout_gravity="center"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/Sign"
            android:textSize="30sp"
            tools:text="@string/Sign" />

        <EditText
            android:id="@+id/checkAmount"
            android:hint="@string/the_total_check_amount"
            android:layout_width="323dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:text="@string/TipPercent"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="176dp"
        android:checkedButton="@+id/radio10">

        <RadioButton
            android:id="@+id/radio10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/Ten" />

        <RadioButton
            android:id="@+id/radio20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/Twenty" />

        <RadioButton
            android:id="@+id/radio30"
            android:layout_width="wrap_content"
            android:layout_height="51dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/Thirty" />
    </RadioGroup>

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/CalculateTotal" />

    <TextView
        android:id="@+id/display"
        android:layout_width="352dp"
        android:layout_height="90dp"
        android:textSize="18sp" />

</LinearLayout>